[fix] minor issue fix